Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33383

Unable to view multiple bitmap cursors using certain constructors.

    XMLWordPrintable

Details

    • 5ad1e2578bb3eaa7da6aefa1f96d79947216d509

    Description

      case 1:
      QBitmap bm(filename)
      QBitmap mask(maskFilename)
      QCursor cursor(bm,mask)
      the above ctor will only display the 1st cursor created.

      case 2:
      QPixmap pm(filename)
      QBitmap mask(maskFilename)
      pm.setMask(mask)
      QCursor cursor(pm)
      the above ctor will work.

      QWindowsCursor::pixmapWindowCursor(const QCursor&) attempts to find the cursor in its cache using the cursor's pixmap.cacheKey() but this will always be 0 for case 1, so only the 1st bitmap cursor is displayed.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              brianb Brian Bosela
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes