Windows/Linux: Cache cursors by mask/pixmap keys and shape.

Task-number: QTBUG-33383

Change-Id: I65a5a0870f50f42c26a4d297331224b3597a36e0
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>

cregit: 5ad1e2578bb3eaa7da6aefa1f96d79947216d509 https://github.com/qt/qtbase/commit/5ad1e2578bb3eaa7da6aefa1f96d79947216d509